<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_database">EditDatabase</string>
    <string name="title_activity_create_table">CreateTable</string>
    <string name="title_activity_createtable_enterrec">createtable_enterrec</string>
    <string name="title_activity_show_table">ShowTable</string>
    <string name="title_activity_edit_table">EditTable</string>
    <string name="title_activity_edited_table">EditedTable</string>
    <string name="title_activity_other_options">OtherOptions</string>
    <string name="password">PASSWORD</string>
    <string name="signup">signup</string>
    <string name="username">USERNAME</string>
    <string name="login">login</string>
    <string name="online_database">Online Database</string>
    <string name="online_database1">Online Database</string>
    <string name="create_new_database">Create New Database</string>
    <string name="use_existing_database">Use Existing database</string>
    <string name="delete_database">Delete Database</string>
    <string name="show_database">Show Database</string>
    <string name="back">back</string>
    <string name="logout">logout</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="title_activity_create_table2">CreateTable2</string>
    <string name="title_activity_database_dialog">DatabaseDialog</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="title_activity_exist_dbinfo">ExistDBInfo</string>
    <string name="title_activity_delete_db">DeleteDB</string>
    <string name="title_activity_query_options">QueryOptions</string>
    <string name="title_activity_update_table">UpdateTable</string>
    <string name="title_activity_table_view">TableView</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_enter_records">EnterRecords</string>
    <string name="title_activity_table_layout">TableLayoutActivity</string>
    <string name="title_activity_delete_rec">DeleteRecActivity</string>
</resources>
