<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.firstapp.tolani.myfirstapp.RegisterPage"
    tools:showIn="@layout/activity_register_page">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:width="320dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/username"
        android:width="320dp"
        android:hint="@string/username"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signup"
        android:textStyle="bold"
        android:textSize="22sp"
        android:onClick="onSignUpClicked"
        android:layout_marginBottom="102dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/confirm_password"
        android:layout_marginStart="45dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirm_password"
        android:width="320dp"
        android:hint="@string/confirm_password"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="48dp" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        android:layout_marginEnd="38dp"
        android:layout_alignBaseline="@+id/signup"
        android:layout_alignBottom="@+id/signup"
        android:layout_alignEnd="@+id/confirm_password"
        android:onClick="onBackClicked" />

</RelativeLayout>
