<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.firstapp.tolani.myfirstapp.EditDatabase"
    tools:showIn="@layout/activity_edit_database">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_database"
        android:id="@+id/showDB"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/DelDB"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="onShowDBClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:textStyle="bold"
        android:textSize="24sp"
        android:onClick="onLogoutClicked"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/showDB"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_existing_database"
        android:id="@+id/useExistDB"
        android:textStyle="bold"
        android:textSize="25sp"
        android:onClick="onUseExistDBClicked"
        android:layout_marginTop="257dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_database"
        android:id="@+id/DelDB"
        android:textStyle="bold"
        android:textSize="25sp"
        android:onClick="onDelDBClicked"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/useExistDB"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_database"
        android:id="@+id/createDB"
        android:textStyle="bold"
        android:textSize="25sp"
        android:onClick="onCreateDBClicked"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/DelDB"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createDB"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/welc"
        android:layout_alignParentEnd="true"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/black" />
</RelativeLayout>
